--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         src="https://assets-global.website-files.com/5f52d24bbe17c5455b1c6b7f/5f52d24bbe17c5f4e61c6cdd_Brand%2520%2526%2520Identity%2520Design%2520for%2520Marketers-p-500.png"
                         alt="CourseImage"></div>
                 <div class="text">
-                    <h1><a href="#">Graphic desighning</a></h1>
+                    <h1><a href="#">Graphic designing</a></h1>
                     <p>web design, image editing, drawing and graphic advertising.
                     </p>
                     <hr>
