--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <img src="./images/sirTahir.jpg"
             alt="Academy fonder image">
         <h1>Founder Of Anglophile Center</h1>
-        <p>The foundations of our educational center are built upon the vision of Muhammad Tahir to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
+        <p>The foundations of our educational center are built upon the vision of Sir Tahir Sheikh to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
         <a href="./pages.html/contact.html" class="buttons">Contact Us</a>
     </section>
 
@@ -225,18 +225,18 @@
        <div class="text">
            <img src="./images/coaching.jpg"
                alt="studentImages">
-           <h1>Alishba Noor</h1>
-           <p><span class="teaching">Coaching Teacher </span>Alishba is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
+           <h1>Miss Mehak</h1>
+           <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
        </div>
        <div class="text">
            <img src="./images/itSIrTahir.jpg"
                alt="studentImages">
-               <h1>M. Tahir</h1>           
+               <h1>Sir Tahir Sheikh</h1>           
                <p><span class="teaching">IT Teacher </span>M. Tahir is a teacher at TAC who teaches other IT related courses and has many years of experience in the field of IT.</p>
        </div>
        <div class="text">
            <img src="./images/missAmina.jpg" alt="studentImages">
-           <h1>Amina Imran</h1>           
+           <h1>Miss Amina Imran</h1>           
            <p><span class="teaching">English Language </span>Miss Amina is a teacher in TAC who teaching the English language course very well.</p>
        </div>
        <div class="text">
@@ -248,8 +248,8 @@
        <div class="text">
            <img src="./images/mam.jpg"
                alt="studentImages">
-           <h1>Areeba Asad</h1>
-           <p><span class="teaching">Video Editing </span>Areeba Asad is a teacher at TAC who teaches video editing using various tools and software.</p>
+           <h1>Miss Eman</h1>
+           <p><span class="teaching">Language Teacher</span>Miss Eman is a teacher at TAC who teaches Language Classes and courses.</p>
        </div>
     </section>
 
