--- a/pages.html/about.html
+++ b/pages.html/about.html
@@ -125,7 +125,7 @@
         <h1>About <span>Academy</span></h1>
         <p>Our mission is to illuminate and enhance the journey of education and skills by combining them together. <br> <br> At The Anglophile center, we consider trust and child as a trust and help them recognize their true potential and provide them with guidance and support.
         </p>
-        <a href="/pages.html/courses.html" class="bt buttons">Learn More</a>
+        <a href="../pages.html/courses.html" class="bt buttons">Learn More</a>
     </div>
 </section>
 <!-- sec1 -->
@@ -135,7 +135,7 @@
         alt="Academy fonder image">
     <h1>Founder Of Anglophile Center</h1>
     <p>The foundations of our educational center are built upon the vision of Muhammad Tahir to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
-    <a href="/pages.html/contact.html" class="buttons">Contact Us</a>
+    <a href="../pages.html/contact.html" class="buttons">Contact Us</a>
 </section>
 <!-- sec2 -->
 <!-- ______________________________________________________________________ -->
