--- a/pages.html/about.html
+++ b/pages.html/about.html
@@ -137,6 +137,38 @@
     <p>The foundations of our educational center are built upon the vision of Muhammad Tahir to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
     <a href="../pages.html/contact.html" class="buttons">Contact Us</a>
 </section>
+
+     <section class="sec10 flex">
+       <div class="text">
+           <img src="./images/coaching.jpg"
+               alt="studentImages">
+           <h1>Miss Mehak</h1>
+           <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
+       </div>
+       <div class="text">
+           <img src="./images/itSIrTahir.jpg"
+               alt="studentImages">
+               <h1>Sir Tahir Sheikh</h1>           
+               <p><span class="teaching">IT Teacher </span>M. Tahir is a teacher at TAC who teaches other IT related courses and has many years of experience in the field of IT.</p>
+       </div>
+       <div class="text">
+           <img src="./images/missAmina.jpg" alt="studentImages">
+           <h1>Miss Amina Imran</h1>           
+           <p><span class="teaching">English Language </span>Miss Amina is a teacher in TAC who teaching the English language course very well.</p>
+       </div>
+       <div class="text">
+           <img src="./images/hunain.jpg"
+               alt="studentImages">
+           <h1>M.Hunain jaweed</h1>
+           <p><span class="teaching">Amazon FBA </span>M.Hunain jaweed is a teacher at TAC who teaches Amazon FBA course very well.</p>
+       </div>
+       <div class="text">
+           <img src="./images/mam.jpg"
+               alt="studentImages">
+           <h1>Miss Eman</h1>
+           <p><span class="teaching">Language Teacher</span>Miss Eman is a teacher at TAC who teaches Language Classes and courses.</p>
+       </div>
+    </section>
 <!-- sec2 -->
 <!-- ______________________________________________________________________ -->
 
