--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         src="https://assets-global.website-files.com/5f52d24bbe17c5455b1c6b7f/5f52d24bbe17c5f4e61c6cdd_Brand%2520%2526%2520Identity%2520Design%2520for%2520Marketers-p-500.png"
                         alt="CourseImage"></div>
                 <div class="text">
-                    <h1><a href="#">Pro Vedio <br> Editing</a></h1>
+                    <h1><a href="#">Pro Video <br> Editing</a></h1>
                     <p>including how to start a project and edit it using audio and video transitions.
                     </p>
                     <hr>
@@ -213,31 +213,31 @@
     </section>
 
     <section class="section sec5 flex">
-        <img src="./images/sirTahir.jpg"
+        <img src="./images/s Tahir Pro.jpg"
             alt="Academy fonder image">
         <h1>Founder Of Anglophile Center</h1>
-        <p>The foundations of our educational center are built upon the vision of Sir Tahir Sheikh to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
+        <p>The foundations of our educational center are built upon the vision of Sir Tahir Sheikh to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" in 2012 with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
         <a href="./pages.html/contact.html" class="buttons">Contact Us</a>
     </section>
 
     <h2 class="outH">Our <span>Teacher's</span></h2>
-    <section class="sec10 flex">
+    <section class="sec10 flex">       
        <div class="text">
+           <img src="./images/s Tahir Pro.jpg"
+               alt="studentImages">
+               <h1>Sir Tahir Sheikh</h1>           
+               <p><span class="teaching">IT Teacher </span>M. Tahir is a teacher at TAC who teaches other IT related courses and has many years of experience in the field of IT.</p>
+       </div>        
+       <div class="text">
+           <img src="./images/missAmina.jpg" alt="studentImages">
+           <h1>Miss Amna Imran</h1>           
+           <p><span class="teaching">English Language </span>Miss Amna is a teacher in TAC who teaching the English language course very well.</p>
+       </div>
+        <div class="text">
            <img src="./images/coaching.jpg"
                alt="studentImages">
            <h1>Miss Mehak</h1>
            <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
-       </div>
-       <div class="text">
-           <img src="./images/itSIrTahir.jpg"
-               alt="studentImages">
-               <h1>Sir Tahir Sheikh</h1>           
-               <p><span class="teaching">IT Teacher </span>M. Tahir is a teacher at TAC who teaches other IT related courses and has many years of experience in the field of IT.</p>
-       </div>
-       <div class="text">
-           <img src="./images/missAmina.jpg" alt="studentImages">
-           <h1>Miss Amina Imran</h1>           
-           <p><span class="teaching">English Language </span>Miss Amina is a teacher in TAC who teaching the English language course very well.</p>
        </div>
        <div class="text">
            <img src="./images/hunain.jpg"
