--- a/pages.html/about.html
+++ b/pages.html/about.html
@@ -31,7 +31,9 @@
 
     <!-- slider -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+<!-- fav -->
+ <link rel="shortcut icon" href="./images/logo 1 (1).png" type="image/x-icon">
+    
     <!-- extra links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
