--- a/pages.html/about.html
+++ b/pages.html/about.html
@@ -32,7 +32,7 @@
     <!-- slider -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <!-- fav -->
- <link rel="shortcut icon" href="./images/logo 1 (1).png" type="image/x-icon">
+ <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
     
     <!-- extra links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -133,30 +133,30 @@
 <!-- sec1 -->
 <!-- sec2 -->
 <section class="section sec5 flex">
-    <img src="../images/sirTahir.jpg"
+    <img src="../images/s Tahir Pro.jpg"
         alt="Academy fonder image">
     <h1>Founder Of Anglophile Center</h1>
-    <p>The foundations of our educational center are built upon the vision of Muhammad Tahir to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
+    <p>The foundations of our educational center are built upon the vision of Muhammad Tahir to foster camaraderie and promote educational advancement. Muhammad Tahir established <br> "The Anglophile Center" in 2012 with the aim of enhancing students' intellectual, educational, and moral foundations.</p>
     <a href="../pages.html/contact.html" class="buttons">Contact Us</a>
 </section>
 
-     <section class="sec10 flex">
+     <section class="sec10 flex">    
        <div class="text">
-           <img src="../images/coaching.jpg"
-               alt="studentImages">
-           <h1>Miss Mehak</h1>
-           <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
-       </div>
-       <div class="text">
-           <img src="../images/itSIrTahir.jpg"
+           <img src="../images/s Tahir Pro.jpg"
                alt="studentImages">
                <h1>Sir Tahir Sheikh</h1>           
                <p><span class="teaching">IT Teacher </span>M. Tahir is a teacher at TAC who teaches other IT related courses and has many years of experience in the field of IT.</p>
        </div>
        <div class="text">
            <img src="../images/missAmina.jpg" alt="studentImages">
-           <h1>Miss Amina Imran</h1>           
-           <p><span class="teaching">English Language </span>Miss Amina is a teacher in TAC who teaching the English language course very well.</p>
+           <h1>Miss Amna Imran</h1>           
+           <p><span class="teaching">English Language </span>Miss Amna is a teacher in TAC who teaching the English language course very well.</p>
+       </div>
+            <div class="text">
+           <img src="../images/coaching.jpg"
+               alt="studentImages">
+           <h1>Miss Mehak</h1>
+           <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
        </div>
        <div class="text">
            <img src="../images/hunain.jpg"
