--- a/pages.html/contact.html
+++ b/pages.html/contact.html
@@ -11,6 +11,9 @@
     <!-- color Variables -->
     <link rel="stylesheet" href="../styling/variables.css">
 
+    <!-- fav -->
+ <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
+    
     <!-- fonts -->
     <link rel="stylesheet" href="../styling/font.css">
 
