--- a/pages.html/courses.html
+++ b/pages.html/courses.html
@@ -20,6 +20,9 @@
     <!-- rsponsive -->
     <link rel="stylesheet" href="../styling/responsive.css">
 
+    <!-- fav -->
+ <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
+    
     <!-- styling -->
     <link rel="stylesheet" href="../styling/style.css">
 
@@ -161,7 +164,7 @@
                         src="https://assets-global.website-files.com/5f52d24bbe17c5455b1c6b7f/5f52d24bbe17c5f4e61c6cdd_Brand%2520%2526%2520Identity%2520Design%2520for%2520Marketers-p-500.png"
                         alt="CourseImage"></div>
                 <div class="text">
-                    <h1><a href="#">Pro Vedio <br> Editing</a></h1>
+                    <h1><a href="#">Pro Video <br> Editing</a></h1>
                     <p>including how to start a project and edit it using audio and video transitions.
                     </p>
                     <hr>
