--- a/pages.html/registration.html
+++ b/pages.html/registration.html
@@ -29,7 +29,8 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+<!-- fav -->
+ <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
   <!-- night -->
   <link rel="stylesheet" href="" id="styleLink">
 
