--- a/index.html
+++ b/index.html
@@ -55,8 +55,16 @@
     <!-- fnc -->
 
     <!-- sfnc  -->
+ <!--         offline     -->
+    <section class="flex offline" id="offline">
+        <div class="offlinee">
+            <img src="./images/offline.gif" alt="offline">
+            <h2>you are offline !</h2>
+        </div>
+    </section>
     <!--         loader     -->
-    <section class="load flex">
+    <!--         loader     -->
+    <section class="load flex" id="loader">
         <div class="loader"></div>
     </section>
     <!--         loader     -->
