--- a/pages.html/registration.html
+++ b/pages.html/registration.html
@@ -37,12 +37,19 @@
 </head>
 
 <body>
-     <!--         loader     -->
-   <section class="load flex" id="loader">
-    <div class="loader"></div>
-</section>
-<!--  -->
-   <!--         loader     -->
+          <!--         loader     -->
+     <section class="load flex" id="loader">
+        <div class="loader"></div>
+    </section>
+    <!--         loader     -->
+     <!--         offline     -->
+     <section class="flex offline" id="offline">
+        <div class="offlinee">
+            <img src="https://i.gifer.com/origin/78/787899e9d4e4491f797aba5c61294dfc_w200.gif" alt="offline">
+            <h2>you are offline !</h2>
+        </div>
+    </section>
+  <!--         loader     -->
    <div class="nav2" id="secondNav">
       
     <div class="list">
