--- a/pages.html/contact.html
+++ b/pages.html/contact.html
@@ -23,6 +23,10 @@
     <!-- styling -->
     <link rel="stylesheet" href="../styling/style.css">
 
+    <!-- favIcon -->
+    <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
+
+
 
     <!-- extra links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -34,12 +38,19 @@
 </head>
 
 <body>
-     <!--         loader     -->
-   <section class="load flex" id="loader">
-    <div class="loader"></div>
-</section>
-<!--  -->
+      <!--         loader     -->
+      <section class="load flex" id="loader">
+        <div class="loader"></div>
+    </section>
     <!--         loader     -->
+     <!--         offline     -->
+     <section class="flex offline" id="offline">
+        <div class="offlinee">
+            <img src="https://i.gifer.com/origin/78/787899e9d4e4491f797aba5c61294dfc_w200.gif" alt="offline">
+            <h2>you are offline !</h2>
+        </div>
+    </section>
+  <!--         loader     -->
     <div class="nav2" id="secondNav">
       
         <div class="list">
