--- a/pages.html/contact.html
+++ b/pages.html/contact.html
@@ -133,7 +133,7 @@
        <div class="forms">
         <form method="post" action="" id="myForm" name="studentContact" class=" flex">
          <h1>Contact Us</h1>
-         <input type="text" name="" id="Name" placeholder="Name" required>
+         <input type="text" name="name" id="Name" placeholder="Name" required>
          <input type="email" name="Email" id="" placeholder="Email" required>
          <textarea name="Message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
          <button type="submit" class="buttons">Submit</button>
