--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
            <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
        </div>
        <div class="text">
-           <img src="./images/hunain.jpg"
+           <img src="./images/parking area.jpg"
                alt="studentImages">
-           <h1>M.Hunain jaweed</h1>
-           <p><span class="teaching">Amazon FBA </span>M.Hunain jaweed is a teacher at TAC who teaches Amazon FBA course very well.</p>
+           <h1>M.Hussain Shamim</h1>
+           <p><span class="teaching">Web Development </span>M.Hussain is a teacher at TAC who teaches Web Development course very well.</p>
        </div>
        <div class="text">
            <img src="./images/mam.jpg"
@@ -350,9 +350,9 @@
               <div class="swiper-slide">
                 
                 <div class="text">
-                    <img src="./images/hussain shamim web creater.jpg"
+                    <img src="./images/zona A.jpg"
                         alt="studentImages">
-                    <h1>Muhammad Hussain Shamim</h1>
+                    <h1>Zona .A</h1>
                     <p>TAC is one of the best and best institute that strives to fulfill the dreams of students.</p>
                 </div>
             
