--- a/pages.html/about.html
+++ b/pages.html/about.html
@@ -171,11 +171,11 @@
            <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching tuition for all school exam preparation.</p>
        </div>
        <div class="text">
-           <img src="../images/hunain.jpg"
-               alt="studentImages">
-           <h1>M.Hunain jaweed</h1>
-           <p><span class="teaching">Amazon FBA </span>M.Hunain jaweed is a teacher at TAC who teaches Amazon FBA course very well.</p>
-       </div>
+        <img src="../images/parking area.jpg"
+            alt="studentImages">
+        <h1>M.Hussain Shamim</h1>
+        <p><span class="teaching">Web Development </span>M.Hussain is a teacher at TAC who teaches Web Development course very well.</p>
+    </div>
        <div class="text">
            <img src="../images/mam.jpg"
                alt="studentImages">
