--- a/pages.html/registration.html
+++ b/pages.html/registration.html
@@ -143,6 +143,8 @@
                     <option value="TCIT">TCIT</option>
                     <option value="Video Editing">Video Editing</option>
                     <option value="Amazon FBA">Amazon FBA</option>
+                    <option value="Coacing">Coacing</option>
+                    <option value="English Language">English Language</option>
                 </select>
 
                 <label for="Full Name">Name</label>
