--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="" id="st">
 
     <!-- favIcon -->
-    <link rel="shortcut icon" href="./images/logo 1 (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo psd.jpg" type="image/x-icon">
 
     <!-- slider -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -103,7 +103,7 @@
     <header>
         <nav class="flex ">
             <div class="logo">
-                <img src="./images/logo 1 (1).png" alt="logo" id="loogo">
+                <img src="./images/logo psd.jpg" alt="logo" id="loogo">
             </div>
             <div class="list">
                 <ul class="flex">
