all cahnges done

--- a/pages.html/courses.html
+++ b/pages.html/courses.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../styling/responsive.css">
 
     <!-- fav -->
- <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
+ <link rel="shortcut icon" href="../images/logo psd.jpg" type="image/x-icon">
     
     <!-- styling -->
     <link rel="stylesheet" href="../styling/style.css">
@@ -85,7 +85,7 @@
 <header>
     <nav class="flex ">
         <div class="logo">
-            <img src="../images/logo 1 (1).png" alt="logo" id="logo">
+            <img src="../images/logo png.png" alt="logo" id="logo">
         </div>
         <div class="list">
             <ul class="flex">
