--- a/pages.html/registration.html
+++ b/pages.html/registration.html
@@ -30,7 +30,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- fav -->
- <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
+ <link rel="shortcut icon" href="../images/logo psd.jpg" type="image/x-icon">
   <!-- night -->
   <link rel="stylesheet" href="" id="styleLink">
 
@@ -85,7 +85,7 @@
 <header>
     <nav class="flex ">
         <div class="logo">
-            <img src="../images/logo 1 (1).png" alt="logo" id="logo">
+            <img src="../images/logo png.png" alt="logo" id="logo">
         </div>
         <div class="list">
             <ul class="flex">
