--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <header>
         <nav class="flex ">
             <div class="logo">
-                <img src="./images/logo psd.jpg" alt="logo" id="loogo">
+                <img src="./images/logo png.png" alt="logo" id="loogo">
             </div>
             <div class="list">
                 <ul class="flex">
