--- a/pages.html/about.html
+++ b/pages.html/about.html
@@ -32,7 +32,7 @@
     <!-- slider -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <!-- fav -->
- <link rel="shortcut icon" href="../images/logo 1 (1).png" type="image/x-icon">
+ <link rel="shortcut icon" href="../images/logo psd.jpg" type="image/x-icon">
     
     <!-- extra links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -89,7 +89,7 @@
 <header>
     <nav class="flex ">
         <div class="logo">
-            <img src="../images/logo 1 (1).png" alt="logo" id="logo">
+            <img src="../images/logo png.png" alt="logo" id="logo">
         </div>
         <div class="list">
             <ul class="flex">
