--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="The Anglophile Center provides educational services to foster intellectual growth and skill development through various courses like web development, graphic design, and more.">
     <meta name="author" content="Muhammad Tahir Sheikh">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 
     <!-- pages link -->
@@ -215,7 +216,7 @@
                         src="https://assets-global.website-files.com/5f52d24bbe17c5455b1c6b7f/5f52d24bbe17c5f4e61c6cdd_Brand%2520%2526%2520Identity%2520Design%2520for%2520Marketers-p-500.png"
                         alt="CourseImage"></div>
                 <div class="text">
-                    <h1><a href="#">Pro Video <br> Editing</a></h1>
+                    <h1><a href="#">Video Editing</a></h1>
                     <p>including how to start a project and edit it using audio and video transitions.
                     </p>
                     <hr>
@@ -238,33 +239,33 @@
 
     <h2 class="outH">Our <span>Teacher's</span></h2>
     <section class="sec10 flex">
-        <div class="text">
+        <!-- <div class="text">
             <img src="./images/s Tahir Pro.jpg" alt="studentImages">
-            <h1>Sir Tahir Sheikh</h1>
+            <h3>Sir Tahir Sheikh</h3>
             <p><span class="teaching">IT Teacher </span>M. Tahir is a teacher at TAC who teaches other IT related
                 courses and has many years of experience in the field of IT.</p>
-        </div>
+        </div> -->
         <div class="text">
             <img src="./images/missAmina.jpg" alt="studentImages">
-            <h1>Miss Amna Imran</h1>
+            <h3>Miss Amna Imran</h3>
             <p><span class="teaching">English Language </span>Miss Amna is a teacher in TAC who teaching the English
                 language course very well.</p>
         </div>
         <div class="text">
             <img src="./images/coaching.jpg" alt="studentImages">
-            <h1>Miss Mehak</h1>
+            <h3>Miss Mehak</h3>
             <p><span class="teaching">Coaching Teacher </span>Miss Mehak is a teacher at TAC who teaches coaching
                 tuition for all school exam preparation.</p>
         </div>
         <div class="text">
             <img src="./images/parking area.jpg" alt="studentImages">
-            <h1>M.Hussain Shamim</h1>
+            <h3>M.Hussain Shamim</h3>
             <p><span class="teaching">Web Development </span>M.Hussain is a teacher at TAC who teaches Web Development
                 course very well.</p>
         </div>
         <div class="text">
             <img src="./images/mam.jpg" alt="studentImages">
-            <h1>Miss Eman</h1>
+            <h3>Miss Eman</h3>
             <p><span class="teaching">Language Teacher</span>Miss Eman is a teacher at TAC who teaches Language Classes
                 and courses.</p>
         </div>
@@ -461,6 +462,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
+    "></script>
     <script src="./js Flow/app.js"></script>
 
 </body>
